--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -6,7 +6,7 @@
       "part2": " तलवा प्रशासन प्रबंधन पोर्टल ",
       "part3": "तलावा एप्लिकेशन के निर्बाध प्रबंधन के लिए।"
     },
-    "fromPalisadoes": "पलिसाडो से",
+    "fromPalisadoes": "पलिसाडो के स्वयंसेवकों द्वारा एक खुला स्रोत अनुप्रयोग",
     "talawa_portal": "तलावा पोर्टल",
     "login": "लॉग इन करें",
     "register": "पंजीकरण करवाना",
