Changed in French language

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -7,7 +7,7 @@
       "part2": " Portail de gestion administrative Talawa ",
       "part3": "pour la gestion transparente de l'application Talawa."
     },
-    "fromPalisadoes": "DE PALISADES",
+    "fromPalisadoes": "Une application open source par les volontaires de la Fondation Palissades",
     "login": "Connexion",
     "register": "S'inscrire",
     "firstName": "Prénom",
