Changed in English language

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,7 +6,7 @@
       "part2": " Talawa Admin Management Portal ",
       "part3": "for the seamless management of Talawa Application."
     },
-    "fromPalisadoes": "FROM PALISADOES",
+    "fromPalisadoes": "An open source application by Palisadoes Foundation volunteers",
     "talawa_portal": "Talawa Portal",
     "login": "Login",
     "register": "Register",
