fixed the translation for hint text in placeholder

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -38,7 +38,8 @@
     "tags": "Tags (Comma(,) Seperated)",
     "isPublic": "Is Public",
     "visibleInSearch": "Visible In Search",
-    "displayImage": "Display Image"
+    "displayImage": "Display Image",
+    "enterName": "Enter Name"
   },
   "superDashListCard": {
     "created": "Created",
@@ -59,7 +60,8 @@
     "roles_userType": "Role/User-Type",
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
-    "user": "USER"
+    "user": "USER",
+    "enterName": "Enter Name"
   },
   "requests": {
     "title": "Talawa Requests",
@@ -68,7 +70,8 @@
     "name": "Name",
     "email": "Email",
     "accept": "Accept",
-    "reject": "Reject"
+    "reject": "Reject",
+    "enterName": "Enter Name"
   },
   "adminNavbar": {
     "talawa_portal": "Talawa Portal",
