--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -38,7 +38,8 @@
     "tags": "Balises (séparées par des virgules (,))",
     "isPublic": "Est publique",
     "visibleInSearch": "Visible dans la recherche",
-    "displayImage": "Afficher l'image"
+    "displayImage": "Afficher l'image",
+    "enterName": "Entrez le nom"
   },
   "superDashListCard": {
     "created": "Établi",
@@ -59,7 +60,8 @@
     "roles_userType": "Rôle/Type d'utilisateur",
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
-    "user": "UTILISATEUR"
+    "user": "UTILISATEUR",
+    "enterName": "Entrez le nom"
   },
   "requests": {
     "title": "Demandes Talawa",
@@ -68,7 +70,8 @@
     "name": "Nom",
     "email": "E-mail",
     "accept": "Accepter",
-    "reject": "Rejeter"
+    "reject": "Rejeter",
+    "enterName": "Entrez le nom"
   },
   "adminNavbar": {
     "talawa_portal": "Portail Talawa",
