--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -38,7 +38,8 @@
     "tags": "Etiquetas (coma (,) separado)",
     "isPublic": "Es público",
     "visibleInSearch": "Visible en la búsqueda",
-    "displayImage": "Mostrar imagen"
+    "displayImage": "Mostrar imagen",
+    "enterName": "Ingrese su nombre"
   },
   "superDashListCard": {
     "created": "Creado",
@@ -59,7 +60,8 @@
     "roles_userType": "Rol/Tipo de usuario",
     "admin": "ADMINISTRACIÓN",
     "superAdmin": "SUPERADMIN",
-    "user": "USUARIO"
+    "user": "USUARIO",
+    "enterName": "Ingrese su nombre"
   },
   "requests": {
     "title": "Solicitudes Talawa",
@@ -68,7 +70,8 @@
     "name": "Nombre",
     "email": "Correo electrónico",
     "accept": "Aceptar",
-    "reject": "Rechazar"
+    "reject": "Rechazar",
+    "enterName": "Ingrese su nombre"
   },
   "adminNavbar": {
     "talawa_portal": "Portal Talawa",
