--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -38,7 +38,8 @@
     "tags": "टैग (अल्पविराम (,) अलग)",
     "isPublic": "सार्वजनिक है",
     "visibleInSearch": "खोज में दृश्यमान",
-    "displayImage": "प्रदर्शन छवि"
+    "displayImage": "प्रदर्शन छवि",
+    "enterName": "नाम दर्ज करें"
   },
   "superDashListCard": {
     "created": "बनाया था",
@@ -59,7 +60,8 @@
     "roles_userType": "भूमिका/उपयोगकर्ता-प्रकार",
     "admin": "व्यवस्थापक",
     "superAdmin": "सुपरएडमिन",
-    "user": "उपयोगकर्ता"
+    "user": "उपयोगकर्ता",
+    "enterName": "नाम दर्ज करें"
   },
   "requests": {
     "title": "तलवा अनुरोध",
@@ -68,7 +70,8 @@
     "name": "नाम",
     "email": "ईमेल",
     "accept": "स्वीकार करना",
-    "reject": "अस्वीकार"
+    "reject": "अस्वीकार",
+    "enterName": "नाम दर्ज करें"
   },
   "adminNavbar": {
     "talawa_portal": "तलावा पोर्टल",
