--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,7 +16,9 @@
     "password": "Password",
     "atleast_8_char_long": "Atleast 8 Character long",
     "confirmPassword": "Confirm Password",
-    "forgotPassword": "Forgot Password ?"
+    "forgotPassword": "Forgot Password ?",
+    "enterEmail" : "Enter Email",
+    "enterPassword":"Enter Password"
   },
   "listNavbar": {
     "talawa_portal": "Talawa Portal",
