--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -16,7 +16,9 @@
     "password": "Mot de passe",
     "atleast_8_char_long": "Au moins 8 caractères",
     "confirmPassword": "Confirmez le mot de passe",
-    "forgotPassword": "Mot de passe oublié ?"
+    "forgotPassword": "Mot de passe oublié ?",
+    "enterEmail" : "entrez l'e-mail",
+    "enterPassword":"Entrer le mot de passe"
   },
   "listNavbar": {
     "talawa_portal": "Portail Talawa",
