--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -16,7 +16,9 @@
     "password": "पासवर्ड",
     "atleast_8_char_long": "कम से कम 8 कैरेक्टर लंबा",
     "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
-    "forgotPassword": "पासवर्ड भूल गए ?"
+    "forgotPassword": "पासवर्ड भूल गए ?",
+    "enterEmail" : "ईमेल दर्ज करें",
+    "enterPassword":"पास वर्ड दर्ज करें"
   },
   "listNavbar": {
     "talawa_portal": "तलावा पोर्टल",
