--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -337,5 +337,9 @@
     "enable": "Activé",
     "install": "Installer",
     "uninstall": "désinstaller"
+  },
+  "memberDetail":{
+    "title": "Détails de l'utilisateur",
+    "addAdmin": "Ajouter un administrateur"
   }
 }
