--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -337,5 +337,9 @@
     "enable": "सक्रिय",
     "install": "स्थापित करना",
     "uninstall": "स्थापना रद्द करें"
+  },
+  "memberDetail":{
+    "title": "उपयोगकर्ता विवरण",
+    "addAdmin": "व्यवस्थापक जोड़ें"
   }
 }
