--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -337,5 +337,9 @@
     "enable": "Activada",
     "install": "Instalar",
     "uninstall": "Desinstalar"
+  },
+  "memberDetail":{
+    "title": "Detalles del usuario",
+    "addAdmin": "Agregar administrador"
   }
 }
