--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -340,6 +340,23 @@
   },
   "memberDetail": {
     "title": "User Details",
-    "addAdmin": "Add Admin"
+    "addAdmin": "Add Admin",
+    "organizations": "Organizations",
+    "events": "Events",
+    "role": "Role",
+    "email": "Email",
+    "createdOn": "Created on",
+    "main": "Main",
+    "firstName": "First name",
+    "lastName": "Last name",
+    "memberOfOrganization": "Member of Organization",
+    "language": "Language",
+    "adminApproved": "Admin approved",
+    "pluginCreationAllowed": "Plugin creation allowed",
+    "joined": "Joined",
+    "created": "Created",
+    "adminForOrganizations": "Admin for Organizations",
+    "membershipRequests": "Membership requests",
+    "adminForEvents": "Admin for events"
   }
 }
