--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -339,7 +339,25 @@
     "uninstall": "卸载"
   },
   "memberDetail": {
-    "title": "用户详细信息",
-    "addAdmin": "添加管理員"
+    "title": "用户详情",
+    "addAdmin": "添加管理员",
+    "organizations": "组织",
+    "events": "事件",
+    "role": "角色",
+    "email": "邮箱",
+    "createdOn": "创建于",
+    "main": "主要",
+    "firstName": "名字",
+    "lastName": "姓氏",
+    "memberOfOrganization": "组织成员",
+    "language": "语言",
+    "adminApproved": "管理员批准",
+    "pluginCreationAllowed": "允许插件创建",
+    "organizationsCreated": "创建的组织",
+    "organizationsJoined": "加入的组织",
+    "adminForOrganizations": "组织管理员",
+    "membershipRequests": "成员请求",
+    "eventsCreated": "创建的事件",
+    "eventsJoined": "加入的事件"
   }
 }
