--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -355,7 +355,7 @@
     "pluginCreationAllowed": "Plugin creation allowed",
     "joined": "Joined",
     "created": "Created",
-    "adminForOrganizations": "Admin for Organizations",
+    "adminForOrganizations": "Admin for organizations",
     "membershipRequests": "Membership requests",
     "adminForEvents": "Admin for events"
   }
