Fixed the translation of All orgnaizations btn in AdminNavbar

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -80,6 +80,7 @@
     "Block/Unblock": "Bloquear/Desbloquear",
     "Plugins": "Complementos",
     "Plugin Store": "Tienda de complementos",
+    "allOrganizations": "Todas las organizaciones",
     "notification": "Notificación",
     "settings": "Ajustes",
     "language": "Idioma",
