--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -80,6 +80,7 @@
     "Block/Unblock": "Block/Unblock",
     "Plugins": "Plugins",
     "Plugin Store": "Plugin Store",
+    "allOrganizations": "All Organizations",
     "notification": "Notification",
     "settings": "Settings",
     "language": "Language",
