--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -80,6 +80,7 @@
     "Block/Unblock": "阻止/解除阻止",
     "Plugins": "插件",
     "Plugin Store": "插件商店",
+    "allOrganizations": "所有组织",
     "notification": "通知",
     "settings": "設置",
     "language": "語",
