--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -301,8 +301,7 @@
   "orgUpdate": {
     "name": "Nombre",
     "description": "Descripción",
-    "creator": "Creador",
-    "apiUrl": "URL API",
+    "location": "ubicación",
     "displayImage": "Mostrar imagen",
     "isPublic": "Es público",
     "isRegistrable": "Es registrable",
