Fixed navbar added tests (#534)
* Fixed navbar added tests

* Fixed the translation of All orgnaizations btn in AdminNavbar

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -79,6 +79,7 @@
     "Block/Unblock": "Block/Unblock",
     "Plugins": "Plugins",
     "Plugin Store": "Plugin Store",
+    "allOrganizations": "All Organizations",
     "notification": "Notification",
     "settings": "Settings",
     "language": "Language",
