--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -79,6 +79,7 @@
     "Block/Unblock": "Bloquer/Débloquer",
     "Plugins": "Plugins",
     "Plugin Store": "Magasin de plugins",
+    "allOrganizations": "Toutes les organisations",
     "notification": "Notification",
     "settings": "Réglages",
     "language": "Langue",
