--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -79,6 +79,7 @@
     "Block/Unblock": "ब्लॉक/अनब्लॉक करें",
     "Plugins": "प्लगइन्स",
     "Plugin Store": "प्लगइन स्टोर",
+    "allOrganizations": "सभी संगठन",
     "notification": "अधिसूचना",
     "settings": "समायोजन",
     "language": "भाषा",
