Fix the updateOrg page, and made it to create mutation request [Fixes #531] (#536)
* fix orgUpdate system

* fix translations

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -299,8 +299,7 @@
   "orgUpdate": {
     "name": "Name",
     "description": "Description",
-    "creator": "Creator",
-    "apiUrl": "Api Url",
+    "location": "Location",
     "displayImage": "Display Image",
     "isPublic": "Is Public",
     "isRegistrable": "Is Registrable",
