--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -299,8 +299,7 @@
   "orgUpdate": {
     "name": "姓名",
     "description": "描述",
-    "creator": "創造者",
-    "apiUrl": "API 網址",
+    "location": "地點",
     "displayImage": "顯示圖像",
     "isPublic": "是公開的",
     "isRegistrable": "可註冊",
