--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -289,7 +289,13 @@
     "cancel": "取消"
   },
   "orgDelete": {
-    "deleteOrg": "刪除組織"
+    "location": "地點",
+    "about": "關於",
+    "deleteThisOrganization": "刪除此組織",
+    "deleteOrg": "刪除組織",
+    "deleteMsg": "您要刪除此組織嗎？",
+    "no": "不",
+    "yes": "是的"
   },
   "membershipRequest": {
     "joined": "加入",
