--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -35,7 +35,7 @@
     "isPublic": "Es público",
     "visibleInSearch": "Visible en la búsqueda",
     "displayImage": "Mostrar imagen",
-    "enterName": "Ingrese su nombre"
+    "enterName": "Ingrese su nombre (Máximo 15 caracteres)"
   },
   "superDashListCard": {
     "created": "Creado",
