Add prompt to Login page - Add prompt in other languages: fr, sp, hi, zh. - switch styling of Login Button with Reg Button

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -13,7 +13,8 @@
     "confirmPassword": "Confirm Password",
     "forgotPassword": "Forgot Password ?",
     "enterEmail": "Enter Email",
-    "enterPassword": "Enter Password"
+    "enterPassword": "Enter Password",
+    "doNotOwnAnAccount": "Do not own an account?"
   },
   "listNavbar": {
     "talawa_portal": "Talawa Portal",
