fixed updateuser logic

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -269,6 +269,7 @@
   "orgSettings": {
     "title": "तलावा सेटिंग",
     "updateYourDetails": "अपना विवरण अपडेट करें",
+    "updateYourPassword": "Update Your Password",
     "updateOrganization": "अद्यतन संगठन",
     "deleteOrganization": "संगठन हटाएं",
     "seeRequest": "अनुरोध देखें",
