--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -269,7 +269,7 @@
   "orgSettings": {
     "title": "Paramètre Talawa",
     "updateYourDetails": "Mettre à jour vos informations",
-    "updateYourPassword": "Update Your Password",
+    "updateYourPassword": "Mettez à jour votre mot de passe",
     "updateOrganization": "Mettre à jour l'organisation",
     "deleteOrganization": "Supprimer l'organisation",
     "seeRequest": "Voir demande",
