--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -269,7 +269,7 @@
   "orgSettings": {
     "title": "Configuración Talawa",
     "updateYourDetails": "Actualiza tus datos",
-    "updateYourPassword": "Update Your Password",
+    "updateYourPassword": "Actualice su contraseña",
     "updateOrganization": "Actualizar Organización",
     "deleteOrganization": "Eliminar Organización",
     "seeRequest": "Ver Solicitud",
@@ -289,6 +289,15 @@
     "saveChanges": "Guardar cambios",
     "cancel": "Cancelar"
   },
+
+  "userPasswordUpdate": {
+    "previousPassword": "Contraseña anterior",
+    "newPassword": "Nueva contraseña",
+    "confirmNewPassword": "Confirmar nueva contraseña",
+    "saveChanges": "Guardar cambios",
+    "cancel": "Cancelar"
+  },
+
   "orgDelete": {
     "deleteOrg": "Eliminar organización"
   },
